--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Login Form</h1>
+	<form id="form">
+		<input type="text" id="uname" placeholder="Username"/>
+		<input type="password" id="password" placeholder="Password"/>
+		<lable id="checkbox">
+			Rememer me:
+			<input type="checkbox" id="checkbox">
+		</lable>
+		<button type="submit" id="submit" >Submit</button>
+		<button id="existing">Login as existing user</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
